Slight adjustmen to avoid shifting when search updates

--- a/styles/components/search.module.css
+++ b/styles/components/search.module.css
@@ -28,10 +28,11 @@
 .inputRow {
     display: flex;
     justify-content: right;
-    align-items: baseline;
+    align-items: center;
     flex-direction: row;
     gap: 0.5rem;
     width: 100%;
+    height: 2rem;
     border-bottom: solid 3px #6576CC;
 }
 .clearSearch {
@@ -43,6 +44,7 @@
     transition: opacity 0.1s ease-in-out;
     height: 2rem;
     width: 2rem;
+    margin: 0;
     border-radius: 0.25rem;
 }
 .clearSearch:focus {
